--- a/DriveLog_swift/Base.lproj/LaunchScreen.storyboard
+++ b/DriveLog_swift/Base.lproj/LaunchScreen.storyboard
@@ -4,8 +4,8 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +20,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_512.png" translatesAutoresizingMaskIntoConstraints="NO" id="xbL-xQ-iSZ">
+                                <rect key="frame" x="-0.5" y="292" width="375" height="375"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="xbL-xQ-iSZ" secondAttribute="height" multiplier="1:1" id="Myn-Z3-WbJ"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.12119803024336007" green="0.81368824179602495" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xbL-xQ-iSZ" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="Rnt-UO-yld"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="xbL-xQ-iSZ" secondAttribute="bottom" id="fKN-e4-m05"/>
+                            <constraint firstItem="xbL-xQ-iSZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="viT-pX-uo7"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,6 +41,9 @@
             <point key="canvasLocation" x="33.125" y="416.87499999999994"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="icon_512.png" width="512" height="512"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
